--- a/listicle.html
+++ b/listicle.html
@@ -27,5 +27,117 @@
 
   -->
 
+  <div class="container">
+    <header class="row">
+      <div class="title">
+        Stanford: 4 on-campus beverages you should <br> be drinking
+        <!-- Stanford: 4 on-campus beverages you should -->
+      </div>
+    </header>
+    <div class="row f-column profile" >
+      <img src="./images/vrk.png" class="profile_img" >
+      <div class="text-center profile_txt">
+        <span class="author_txt">
+          Victoria Kirst
+        </span>
+        <br>
+        <span class="update_date">
+          <em>Last updated Apr 7, 2017</em>
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="content">
+    <div class="row">
+      <div class="number">
+        1.
+      </div>
+      <div class="beverage">
+        <div class="b-header">
+          <h2 class="b-title">Italian soda at Bytes</h2>
+          <a class="blue small b-link" href="https://goo.gl/maps/EjneHBEPksw">350 Serra Mall, Stanford, CA</a>
+        </div>
+        <div class="b-context">
+          <p>
+            When's the last time you've had an Italian soda? It had been a while for me, but I wanted to join my friend for a non-caffeinated beverage at Bytes and I became reaquainted with the combination of fizzy water and artificial fruit syrup. Italian sodas are not so sweet as a normal soda and not so boring as a flavored carbonated water. The Italian sodas at Bytes also have no cream in them (or maybe they do if you ask; I haven't tried), which makes it a nice coffee shop alternative for the times when you're feeling a refreshing drink that doesn't have caffeine or milk.
+          </p>
+        </div>
+        <div class="b-recommend">
+          <b>Recommendation: Raspberry Italian soda</b>
+        </div>
+        <!-- <div class="b-img"> -->
+        <img src="images/italian-soda.jpg" alt="" class="beverage-img">
+        <!-- </div> -->
+      </div>
+    </div>
+    <div class="row">
+      <div class="number">
+        2.
+      </div>
+      <div class="beverage">
+        <div class="b-header">
+          <h2 class="b-title">Bubble tea at Pop Tea Bar</h2>
+          <a class="blue small b-link" href="https://goo.gl/maps/3jHRC2umZCy">456 Cambridge Ave, Palo Alto, CA</a>
+        </div>
+        <div class="b-context">
+          <p>
+            When your boba craving strikes, head over to Pop Tea Bar, a cute little bubble tea shop on Cambridge Avenue. The menu is your standard bubble tea fare with nothing too adventurous on the menu -- no bubble tea floats, for example -- but the tapioca is fresh, the service is fast, and the tea is smooth and delicious! They have little bites to eat too, like popcorn chicken and eggrolls, in perfect snack-size portions. There's not too much seating, but there's a cute outdoor area in the back for warmer days.
+
+            Pop Tea Bar isn't exactly on campus, but the Marguerite has got you covered. Ride the 1050A to California and El Camino and it's a short walk from there. (11 minutes total from the Gates Computer Science Building!)
+          </p>
+        </div>
+        <div class="b-recommend">
+          <b>Recommendation: Classic Milk Tea with tapioca + an order of popcorn chicken.</b>
+        </div>
+        <!-- <div class="b-img"> -->
+        <img src="images/boba.jpg" alt="" class="beverage-img">
+        <!-- </div> -->
+      </div>
+    </div>
+    <div class="row">
+      <div class="number">
+        3.
+      </div>
+      <div class="beverage">
+        <div class="b-header">
+          <h2 class="b-title">Latte at CoHo</h2>
+          <a class="blue small b-link" href="https://goo.gl/maps/jaov5FhK5852">459 Lagunita Dr, Stanford, CA</a>
+        </div>
+        <div class="b-context">
+          <p>
+            I can't tell you whether CoHo has a particularly amazing Vanilla Bean Latte, only because CoHo is the only place I've ever ordered a Vanilla Bean Latte from. I'm not even totally sure I know what a Vanilla Bean Latte is supposed to taste like. What I do know is the Vanilla Bean Latte I ordered on a whim from CoHo was delicious.
+          </p>
+        </div>
+        <div class="b-recommend">
+          <b>Recommendation: Vanilla Bean Latte</b>
+        </div>
+        <!-- <div class="b-img"> -->
+        <img src="images/coho-coffee.jpg" alt="" class="beverage-img">
+        <!-- </div> -->
+      </div>
+    </div>
+    <div class="row">
+      <div class="number">
+        4.
+      </div>
+      <div class="beverage">
+        <div class="b-header">
+          <h2 class="b-title">Agua Fresca at Nexus Cafe</h2>
+          <a class="blue small b-link" href="https://goo.gl/maps/WzJZx183auA2">318 Campus Drive, Stanford, CA</a>
+        </div>
+        <div class="b-context">
+          <p>
+            Nexus Cafe has a lot of tasty things packed into its cafeteria space, including agua fresca! Grab a cup of this fresh and fruity beverage before you head to the check out line. Nexus Cafe has plenty of indoor and outdoor seating, too, so on the next sunny day, take a break on the patio with a cup of agua fresca, and maybe a burrito.
+          </p>
+        </div>
+        <div class="b-recommend">
+          <b>Recommendation: Agua Fresca</b>
+        </div>
+        <!-- <div class="b-img"> -->
+        <img src="images/nexus-cafe.jpg" alt="" class="beverage-img">
+        <!-- </div> -->
+      </div>
+    </div>
+  </div>
   </body>
 </html>
