--- a/listicle.html
+++ b/listicle.html
@@ -28,7 +28,7 @@
   -->
 
   <div class="container">
-    <header class="row">
+    <header class="row justify-content-center">
       <div class="title">
         Stanford: 4 on-campus beverages you should <br> be drinking
         <!-- Stanford: 4 on-campus beverages you should -->
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="content">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="number">
         1.
       </div>
@@ -70,7 +70,7 @@
         <!-- </div> -->
       </div>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="number">
         2.
       </div>
@@ -94,7 +94,7 @@
         <!-- </div> -->
       </div>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="number">
         3.
       </div>
@@ -116,7 +116,7 @@
         <!-- </div> -->
       </div>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="number">
         4.
       </div>
