--- a/my-list.html
+++ b/my-list.html
@@ -7,6 +7,20 @@
   </head>
   <body>
   <!-- TODO(you): Create your own list-based article! It can look however you'd like. -->
+
+  <!-- <div class="test"></div> -->
+  <header>
+  <div class="title flex align-content-center justify-content-center">
+     <div class="slide-animation">
+       The cute cat picture
+     </div>
+
+  </div>
+</header>
+<div class="parallax img1"></div>
+<div class="parallax img2"></div>
+<div class="parallax img3"></div>
+<div class="parallax img4"></div>
+
   </body>
 </html>
-
